--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -3,6 +3,7 @@
 @syntax-cursor-color: #F8F8F0;
 @syntax-selection-color: #49483E;
 @syntax-background-color: #272822;
+@syntax-line-color: #3E3D32;
 
 // Guide colors
 @syntax-wrap-guide-color: rgba(255, 255, 255, .1);
