--- a/index.less
+++ b/index.less
@@ -1,7 +1,8 @@
 @import 'syntax-variables';
 
 atom-text-editor, :host {
-  background-color: @syntax-background-color;
+  // background-color: @syntax-background-color;
+  background: transparent;
   color: @syntax-text-color;
 
   .invisible-character {
@@ -17,7 +18,7 @@ atom-text-editor, :host {
   }
 
   .cursor-line {
-      background-color: @syntax-line-color;
+    background-color: @syntax-line-color;
   }
 
   .gutter {
