--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -2,7 +2,7 @@
 @syntax-text-color: #F8F8F2;
 @syntax-cursor-color: #F8F8F0;
 @syntax-selection-color: #49483E;
-@syntax-background-color: #272822;
+// @syntax-background-color: #272822;
 @syntax-line-color: #3E3D32;
 
 // Guide colors
