--- a/index.less
+++ b/index.less
@@ -1,7 +1,7 @@
 @import 'syntax-variables';
 
 atom-text-editor, :host {
-  background-color: @syntax-background-color;
+  background-color: @syntax-background-color-actual;
   color: @syntax-text-color;
 
   .invisible-character {
